


namespace DoofesZeug.Models.Human.Professions
{
    public class PoliceOfficer : Profession
    {
        public PoliceOfficer() : base(nameof(PoliceOfficer))
        {

        }
    }
}
